--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,16 +9,19 @@
     <string name="action_pass">비회원으로 시작하기</string>
 
     <string name="board">게시판</string>
-    <string name="map">지도</string>
     <string name="chat">채팅</string>
     <string name="signin_complete">님 환영합니다</string>
     <string name="signin_fail">로그인 실패</string>
 
     <string name="menu_home">홈</string>
-    <string name="menu_near">내 근처</string>
-    <string name="menu_chat">채팅</string>
+    <string name="menu_playlist">플레이리스트</string>
+    <string name="menu_mic">녹음</string>
     <string name="menu_set">설정</string>
+    <string name="menu_profile">마이페이지</string>
 
+    <string name="covery">COVERY</string>
+    <string name="rangking">실시간 순위</string>
+    <string name="newest">최신 업로드</string>
     <string name="anonymous">익명</string>
 
     <string-array name="blood_type">
