--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="action_sign_in_kakao">카카오로 시작하기</string>
     <string name="action_sign_in_google">구글로 시작하기</string>
-    <string name="action_pass">비회원으로 시작하기</string>
+    <string name="action_pass">시작하기</string>
 
     <string name="board">게시판</string>
     <string name="chat">채팅</string>
