--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,12 @@
     <string name="musicName">노래제목을 입력하시오</string>
     <string name="btnBring">가져오기</string>
 
+    <string name="infoId">계정 정보</string>
+    <string name="pushName">푸쉬 알림</string>
+    <string name="autoPlay">백그라운드 자동 재생</string>
+    <string name="announce">공지 사항</string>
+    <string name="qna_btn">문의</string>
+    <string name="str_name">이름</string>
 
     <string-array name="blood_type">
         <item>O형</item>
