--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,9 @@
     <string name="myCover">나의 커버곡</string>
     <string name="myComment">나의 댓글</string>
     <string name="myFavorite">좋아요한 커버곡</string>
+    <string name="bring_view">가져오기</string>
+    <string name="record_view">녹음하기</string>
+    <string name="file_name">선택한 파일</string>
 
     <string name="myBring">녹음파일 가져오기</string>
     <string name="myMic">커버곡 녹음하기</string>
@@ -39,7 +42,8 @@
     <string name="btnStart">재생</string>
     <string name="btnUpload">업로드</string>
     <string name="musicName">노래제목을 입력하시오</string>
-    <string name="btnBring">가져오기</string>
+    <string name="btnBring">파일 선택</string>
+    <string name="listen_text">미리 듣기</string>
 
     <string name="infoId">계정 정보</string>
     <string name="pushName">푸쉬 알림</string>
